[#782] API - Added API for CLA Manager REQUEST ACCESS
- API - Added handlers, service layer, database logic for handing pending CLA manager requests
- API - Updated logic that sends email to CLA managers and requesters when requests are received, approved and denied
- API - Added logic to create/send events when CLA manager requests are generated, approved and denied
- API - Added logic to update the Signature ACL when the CLA manager request is approved
- API - added platform project and organization service client/model download/build options
- UI - Updated links in UI to support CLA Manager request/approve/deny.
